@@ -350,6 +350,7 @@ class Calculator {
 	/** @name Constructor */
 	//@{
 	Calculator();
+	Calculator(bool ignore_locale);
 	virtual ~Calculator();
 	//@}
 
@@ -1151,8 +1152,7 @@ class Calculator {
 	const string &getComma() const;
 	/** Sets argument separator and decimal sign from the current locale. Mainly for internal use. */
 	void setLocale();
-	/** If "C" locale shall be used. */
-	void setIgnoreLocale();
+	bool getIgnoreLocale();
 	void useDecimalComma();
 	/** Use point as decimal separator. 
 	* To use comma as an ignored separator in numbers, must be invoked with comma_as_separator = true, to change the default function argument separator to semicolon, in addition to using ParseOptions::comma_as_separator.
